--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
+    <!-- <script
       crossorigin
       src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=default"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <div id="app"></div>
